--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                                 </li>
                                 <li class="list-inline-item mx-2">
                                     <a href="http://letian-wang.github.io/">
-                                        <p style="margin: 0;">Letian Wang<sup>1*</sup></p>
+                                        <p style="margin: 0;">Letian Wang<sup>1</sup></p>
                                     </a>
                                 </li>
                                 <li class="list-inline-item mx-2">
