--- a/index.html
+++ b/index.html
@@ -660,13 +660,13 @@
                         <div class="col text-center mt-m4">
                             <ul class="list-inline">
                                 <li class="list-inline-item">
-                                    <a href="https://drivinggen-bench.github.io/" class="resource-button">
+                                    <a href="https://arxiv.org/abs/2601.01528" class="resource-button">
                                         <i class="bi bi-file-earmark-text"></i>
-                                        Paper (Coming)
+                                        Paper
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://drivinggen-bench.github.io/" class="resource-button">
+                                    <a href="https://github.com/youngzhou1999/DrivingGen" class="resource-button">
                                         <i class="bi bi-github"></i>
                                         Code (Coming)
                                     </a>
