--- a/index.html
+++ b/index.html
@@ -691,10 +691,10 @@
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://drivinggen-bench.github.io/" class="resource-button">
+                                    <a href="https://x.com/YangZhou99/status/2011050970839461922" class="resource-button">
                                         <!-- <i class="bi bi-twitter"></i> -->
                                          <img src="./assets/images/icons/twitter.png" class="button-icon" style="width: 1em; height: 1em;">
-                                        TL;DR (Coming)
+                                        TL;DR
                                     </a>
                                 </li>
                             </ul>
